traces/bug_867.txt
examples++-load/iovtk.cpp:2789: error: DEAD_STORE
  The value written to &DataLabel (type std::basic_string<char,std::char_traits<char>,std::allocator<char>>*) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2789:18: Write of unused value
2787.   
2788.     string *DataLabel;
2789.     if( nargs[3] ) DataLabel = GetAny<string *>((*nargs[3])(stack));
                         ^
2790.   
2791.     Mesh3 * Th = VTK_Load3( *pffname, swap); 
